--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.10",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "resend": "^6.4.1"
   }
 }
